// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PortfolioLogo renders with L2 icon 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 2px;
  position: relative;
  top: 0;
  left: 0;
}

.c1 img:nth-child(n) {
  width: 19px;
  height: 40px;
  object-fit: cover;
}

.c1 img:nth-child(1) {
  border-radius: 20px 0 0 20px;
  object-position: 0 0;
}

.c1 img:nth-child(2) {
  border-radius: 0 20px 20px 0;
  object-position: 100% 0;
}

.c0 {
  position: relative;
  top: 0;
  left: 0;
}

.c2 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c3 {
  border-radius: 4px;
  height: 16px;
  left: 60%;
  position: absolute;
  top: 60%;
  outline: 2px solid #FFFFFF;
  width: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <img
        class="c2"
        src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/arbitrum/assets/0xDA10009cBd5D07dd0CeCc66161FC93D7c9000da1/logo.png"
      />
      <img
        class="c2"
        src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/arbitrum/assets/0xFF970A61A04b1cA14834A43f5dE4533eBDDB5CC8/logo.png"
      />
    </div>
    <div
      class="c3"
    >
      <svg
        aria-labelledby="titleID"
        height="16"
        width="16"
      >
        <title
          id="titleID"
        >
          Arbitrum logo
        </title>
        <rect
          fill="#F9F9F9"
          height="16"
          rx="4"
          width="16"
        />
        <rect
          fill="#00A3FF33"
          height="16"
          rx="4"
          width="16"
        />
        <svg
          height="16"
          width="16"
        >
          arbitrum.svg
        </svg>
      </svg>
    </div>
  </div>
</div>
`;

exports[`PortfolioLogo renders without L2 icon 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 2px;
  position: relative;
  top: 0;
  left: 0;
}

.c1 img:nth-child(n) {
  width: 19px;
  height: 40px;
  object-fit: cover;
}

.c1 img:nth-child(1) {
  border-radius: 20px 0 0 20px;
  object-position: 0 0;
}

.c1 img:nth-child(2) {
  border-radius: 0 20px 20px 0;
  object-position: 100% 0;
}

.c0 {
  position: relative;
  top: 0;
  left: 0;
}

.c2 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <img
        class="c2"
        src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
      />
      <img
        class="c2"
        src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
      />
    </div>
  </div>
</div>
`;
